chore: fix comment

--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/Properties/launchSettings.json
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/Properties/launchSettings.json
@@ -1,5 +1,6 @@
 {
   "profiles": {
+    // Debug project within Teams
     "Microsoft Teams (browser)": {
       "commandName": "Project",
       "commandLineArgs": "host start --port 5130 --pause-on-error",
@@ -10,17 +11,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "TEAMSFX_NOTIFICATION_LOCALSTORE_DIR": "../../.." // Path to project folder $(MSBuildProjectDirectory)
       }
+    },
+    // Debug project only (without launching Teams)
+    "StocksUpdateNotificationBot": {
+      "commandName": "Project",
+      "commandLineArgs": "host start --port 5130 --pause-on-error",
+      "dotnetRunMessages": "true",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "TEAMSFX_NOTIFICATION_LOCALSTORE_DIR": "../../.." // Path to project folder $(MSBuildProjectDirectory)
+      }
     }
-    //// Uncomment following profile to debug project only (without launching Teams)
-    //,
-    //"StocksUpdateNotificationBot": {
-    //  "commandName": "Project",
-    //  "commandLineArgs": "host start --port 5130 --pause-on-error",
-    //  "dotnetRunMessages": "true",
-    //  "environmentVariables": {
-    //    "ASPNETCORE_ENVIRONMENT": "Development",
-    //    "TEAMSFX_NOTIFICATION_LOCALSTORE_DIR": "../../.." // Path to project folder $(MSBuildProjectDirectory)
-    //  }
-    //}
   }
 }
