--- a/hello-world-in-meeting/.gitignore
+++ b/hello-world-in-meeting/.gitignore
@@ -1,9 +1,18 @@
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# TeamsFx files
+teamsfx/.env.*
 .DS_Store
-.env.teamsfx.local
-subscriptionInfo.json
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.deployment
