--- a/hello-world-in-meeting/.vscode/tasks.json
+++ b/hello-world-in-meeting/.vscode/tasks.json
@@ -7,25 +7,23 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Build & upload Teams manifest",
+                "Validate prerequisites",
+                "Create resources",
+                "Set up local projects",
                 "Start services"
             ],
             "dependsOrder": "sequence"
         },
         {
-            // Check if all required prerequisites are installed and will install them if not.
+            // Check all required prerequisites.
             // See https://aka.ms/teamsfx-check-prerequisites-task to know the details and how to customize the args.
-            "label": "Validate & install prerequisites",
+            "label": "Validate prerequisites",
             "type": "teamsfx",
             "command": "debug-check-prerequisites",
             "args": {
                 "prerequisites": [
                     "nodejs", // Validate if Node.js is installed.
                     "m365Account", // Sign-in prompt for Microsoft 365 account, then validate if the account enables the sideloading permission.
-                    "devCert", // Install localhost SSL certificate. It's used to serve the development sites over HTTPS to debug the Tab app in Teams.
                     "portOccupancy" // Validate available ports to ensure those debug ones are not occupied.
                 ],
                 "portOccupancy": [
@@ -34,41 +32,25 @@
             }
         },
         {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-npm-install",
+            "command": "provision",
             "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
-                ]
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            // Set up local projects.
+            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            "label": "Set up local projects",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "deploy",
             "args": {
-                "baseUrl": "https://localhost:53000"
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
@@ -83,7 +65,7 @@
             "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/tabs"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": {
                 "pattern": {
