--- a/hello-world-tab-with-backend/.gitignore
+++ b/hello-world-tab-with-backend/.gitignore
@@ -1,11 +1,12 @@
-node_modules
-.fx/configs/localSettings.json
-.fx/states/*.userdata
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# TeamsFx files
+teamsfx/.env.*
 .DS_Store
-.archive
-.archive.log
-.env.teamsfx.local
-subscriptionInfo.json
 build
-.fx/configs/config.local.json
-.fx/states/state.local.json
+.deployment
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
