--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -8,10 +8,8 @@
             "label": "Start Teams App Locally",
             "dependsOn": [
                 "Validate & install prerequisites",
-                "Install npm packages",
-                "Set up tab",
-                "Set up SSO",
-                "Build & upload Teams manifest",
+                "Create resources",
+                "Set up local projects",
                 "Start services"
             ],
             "dependsOrder": "sequence"
@@ -39,61 +37,21 @@
             }
         },
         {
-            // Check if all the npm packages are installed and will install them if not.
-            // See https://aka.ms/teamsfx-npm-package-task to know the details and how to customize the args.
-            "label": "Install npm packages",
+            "label": "Create resources",
             "type": "teamsfx",
-            "command": "debug-npm-install",
+            "command": "provision",
             "args": {
-                "projects": [
-                    {
-                        "cwd": "${workspaceFolder}/tabs",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    },
-                    {
-                        "cwd": "${workspaceFolder}/api",
-                        "npmInstallArgs": [
-                            "--no-audit"
-                        ]
-                    }
-                ]
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
-            // Prepare local launch information for Tab.
-            // See https://aka.ms/teamsfx-debug-set-up-tab-task to know the details and how to customize the args.
-            "label": "Set up tab",
+            "label": "Set up local projects",
             "type": "teamsfx",
-            "command": "debug-set-up-tab",
+            "command": "deploy",
             "args": {
-                "baseUrl": "https://localhost:53000"
-            }
-        },
-        {
-            // Register resources and prepare local launch information for SSO functionality.
-            // See https://aka.ms/teamsfx-debug-set-up-sso-task to know the details and how to customize the args.
-            "label": "Set up SSO",
-            "type": "teamsfx",
-            "command": "debug-set-up-sso",
-            "args": {
-                //// Enter your own AAD app information if using the existing AAD app. ////
-                // "objectId": "",
-                // "clientId": "",
-                // "clientSecret": "", // use plain text or environment variable reference like ${env:CLIENT_SECRET}
-                // "accessAsUserScopeId": "
-            }
-        },
-        {
-            // Build and upload Teams manifest.
-            // See https://aka.ms/teamsfx-debug-prepare-manifest-task to know the details and how to customize the args.
-            "label": "Build & upload Teams manifest",
-            "type": "teamsfx",
-            "command": "debug-prepare-manifest",
-            "args": {
-                //// Enter your own Teams app package path if using the existing Teams manifest. ////
-                // "appPackagePath": ""
+                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "env": "local"
             }
         },
         {
@@ -106,10 +64,10 @@
         {
             "label": "Start frontend",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/tabs"
+                "cwd": "${workspaceFolder}"
             },
             "problemMatcher": {
                 "pattern": {
@@ -128,10 +86,10 @@
         {
             "label": "Start backend",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
+            "command": "node teamsfx/script/run.api.js . teamsfx/.env.local",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/api",
+                "cwd": "${workspaceFolder}",
                 "env": {
                     "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
@@ -175,7 +133,7 @@
         {
             "label": "Watch backend",
             "type": "shell",
-            "command": "npm run watch:teamsfx",
+            "command": "npm run watch",
             "isBackground": true,
             "options": {
                 "cwd": "${workspaceFolder}/api"
