--- a/hello-world-bot/package.json
+++ b/hello-world-bot/package.json
@@ -2,10 +2,14 @@
   "name": "hello-world-bot",
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit hello world Bot sample",
+  "engines": {
+    "node": ">=14 <=16"
+  },
   "author": "Microsoft",
   "license": "MIT",
   "main": "./lib/index.js",
   "scripts": {
+    "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
     "dev": "nodemon --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./index.ts",
     "build": "tsc --build && shx cp -r ./adaptiveCards ./lib/",
     "start": "node ./lib/index.js",
