chore: migrate in-meeting app, fix after comments

--- a/hello-world-in-meeting/teamsfx/app.yml
+++ b/hello-world-in-meeting/teamsfx/app.yml
@@ -34,7 +34,7 @@ deploy:
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: tab
+      name: hello-world-in-meeting
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
