--- a/hello-world-bot/teamsfx/app.local.yml
+++ b/hello-world-bot/teamsfx/app.local.yml
@@ -27,7 +27,7 @@ configureApp:
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
 
-  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
