--- a/hello-world-tab-with-backend/aad.manifest.template.json
+++ b/hello-world-tab-with-backend/aad.manifest.template.json
@@ -1,7 +1,7 @@
 {
     "id": "${{AAD_APP_OBJECT_ID}}",
     "appId": "${{AAD_APP_CLIENT_ID}}",
-    "name": "hello-world-tab-aad",
+    "name": "hello-world-tab-with-backend-aad",
     "accessTokenAcceptedVersion": 2,
     "signInAudience": "AzureADMyOrg",
     "optionalClaims": {
