--- a/hello-world-tab-with-backend/api/package.json
+++ b/hello-world-tab-with-backend/api/package.json
@@ -2,6 +2,7 @@
     "name": "teamsfx-template-api",
     "version": "1.0.0",
     "scripts": {
+        "dev:teamsfx": "node ../teamsfx/script/run.api.js ../ ../teamsfx/.env.local",
         "dev": "func start --typescript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
         "build": "tsc",
         "watch": "tsc -w",
@@ -16,7 +17,6 @@
         "isomorphic-fetch": "^3.0.0"
     },
     "devDependencies": {
-        "env-cmd": "^10.1.0",
         "typescript": "^4.4.4"
     }
 }
