--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -23,17 +23,12 @@
     "@types/react": "^16.14.6",
     "@types/react-dom": "^16.9.12",
     "@types/react-router-dom": "^5.1.7",
-    "cross-env": "^7.0.3",
-    "env-cmd": "^10.1.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
-    "start": "cross-env react-scripts start",
-    "install:teamsfx": "npm install",
-    "build": "cross-env react-scripts build",
-    "build:teamsfx": "cross-env-shell \"env-cmd -f .env.teamsfx.${TEAMS_FX_ENV} npm run build\"",
-    "build:teamsfx:dev": "cross-env TEAMS_FX_ENV=dev npm run build:teamsfx",
+    "dev:teamsfx": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject"
   },
