--- a/todo-list-with-Azure-backend-M365/teamsfx/app.local.yml
+++ b/todo-list-with-Azure-backend-M365/teamsfx/app.local.yml
@@ -45,7 +45,7 @@ configureApp:
     # TEAMS_APP_ID: the id of Teams app
 
 deploy:
-  - uses: tools/install # Install dependencies
+  - uses: prerequisite/install # Install dependencies
     with:
       devCert:
         trust: true
