--- a/todo-list-SPFx/SPFx/package.json
+++ b/todo-list-SPFx/SPFx/package.json
@@ -9,32 +9,36 @@
     "test": "gulp test",
     "format": "prettier --write \"{src,tests}/**/*.ts\""
   },
+  "engines": {
+    "node": ">=16.13.0 <17.0.0"
+  },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.15.0",
-    "@microsoft/sp-lodash-subset": "1.15.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.15.0",
-    "@microsoft/sp-property-pane": "1.15.0",
-    "@microsoft/sp-webpart-base": "1.15.0",
-    "office-ui-fabric-react": "7.185.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "@microsoft/sp-core-library": "1.16.0",
+    "@microsoft/sp-lodash-subset": "1.16.0",
+    "@microsoft/sp-office-ui-fabric-core": "1.16.0",
+    "@microsoft/sp-property-pane": "1.16.0",
+    "@microsoft/sp-webpart-base": "1.16.0",
+    "office-ui-fabric-react": "7.199.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@microsoft/eslint-config-spfx": "1.15.0",
-    "@microsoft/eslint-plugin-spfx": "1.15.0",
+    "@microsoft/eslint-config-spfx": "1.16.0",
+    "@microsoft/eslint-plugin-spfx": "1.16.0",
     "@microsoft/rush-stack-compiler-3.9": "0.4.47",
     "@microsoft/rush-stack-compiler-4.5": "0.2.2",
-    "@microsoft/sp-build-web": "1.15.0",
-    "@microsoft/sp-module-interfaces": "1.15.0",
+    "@microsoft/sp-build-web": "1.16.0",
+    "@microsoft/sp-module-interfaces": "1.16.0",
     "@rushstack/eslint-config": "2.5.1",
-    "@types/react": "16.9.51",
-    "@types/react-dom": "16.9.8",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
     "@types/webpack-env": "1.15.2",
     "ajv": "6.12.5",
     "eslint": "8.7.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "gulp": "~4.0.2",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "typescript": "4.5.5"
   }
 }
