chore(localdebug): update adaptive card sample to v3

--- a/adaptive-card-notification/tsconfig.json
+++ b/adaptive-card-notification/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2016",
     "module": "commonjs",
     "outDir": "./dist",
+    "rootDir": "./",
     "sourceMap": true,
     "incremental": true,
     "resolveJsonModule": true,
