--- a/adaptive-card-notification/.vscode/settings.json
+++ b/adaptive-card-notification/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "debug.onTaskErrors": "abort",
+    "json.schemas": [
+        {
+            "fileMatch": [
+                "/aad.*.json"
+            ],
+            "schema": {}
+        }
+    ],
     "azureFunctions.stopFuncTaskPostDebug": false,
     "azureFunctions.showProjectWarning": false,
     "csharp.suppressDotnetRestoreNotification": true
