--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -1,13 +1,41 @@
 {
-    "name": "adaptive-card-notification",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
-    },
-    "license": "MIT"
+  "name": "adaptive-card-notification",
+  "version": "1.0.0",
+  "description": "Microsoft Teams Toolkit Adaptive Card Notification Bot Sample",
+  "engines": {
+    "node": ">=14 <=16"
+  },
+  "author": "Microsoft",
+  "license": "MIT",
+  "scripts": {
+    "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
+    "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
+    "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
+    "watch:teamsfx": "tsc --watch",
+    "build": "tsc",
+    "watch": "tsc -w",
+    "prestart": "npm run build",
+    "start": "npx func start"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "@azure/storage-blob": "^12.9.0",
+    "@microsoft/adaptivecards-tools": "^1.0.0",
+    "@microsoft/teamsfx": "^2.0.0",
+    "botbuilder": "^4.15.0"
+  },
+  "devDependencies": {
+    "@azure/functions": "^1.2.3",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
+    "azurite": "^3.16.0",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4",
+    "@microsoft/teamsfx-run-utils": "alpha"
+  }
 }
