--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adaptive-card-notification",
+  "name": "adaptive-card-notifi",
   "version": "1.0.0",
   "description": "Microsoft Teams Toolkit Adaptive Card Notification Bot Sample",
   "engines": {
