fix: fix typo and error file path

--- a/adaptive-card-notification/appPackage/manifest.template.json
+++ b/adaptive-card-notification/appPackage/manifest.template.json
@@ -16,7 +16,7 @@
     },
     "name": {
         "short": "${{TEAMS_APP_NAME}}",
-        "full": "ful name for adaptive-card-notifi"
+        "full": "full name for adaptive-card-notifi"
     },
     "description": {
         "short": "short description for adaptive-card-notifi",
