chore(debug): add channels to botFramework action in v3 templates
- rename actions in m365 projects by the way

--- a/bot-sso/teamsfx/app.local.yml
+++ b/bot-sso/teamsfx/app.local.yml
@@ -33,6 +33,8 @@ provision:
       name: sso-bot
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
+      channels:
+        - name: msteams
 
 configureApp:
 
