--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsfx/app.local.yml
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsfx/app.local.yml
@@ -28,6 +28,8 @@ provision:
       name: stocks-update-notif-bot
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
+      channels:
+        - name: msteams
 
 configureApp:
   - uses: teamsApp/validate
