--- a/adaptive-card-notification/teamsfx/app.local.yml
+++ b/adaptive-card-notification/teamsfx/app.local.yml
@@ -21,6 +21,8 @@ provision:
       name: adaptive-card-notifi
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
+      channels:
+        - name: msteams
 
 configureApp:
   - uses: teamsApp/validate
