--- a/stocks-update-notification-bot/teamsfx/app.local.yml
+++ b/stocks-update-notification-bot/teamsfx/app.local.yml
@@ -21,6 +21,8 @@ provision:
       name: stocks-update-notif-bot
       messagingEndpoint: ${{BOT_ENDPOINT}}/api/messages
       description: ""
+      channels:
+        - name: msteams
 
 configureApp:
   - uses: teamsApp/validate
