--- a/todo-list-with-Azure-backend-M365/teamsfx/app.local.yml
+++ b/todo-list-with-Azure-backend-M365/teamsfx/app.local.yml
@@ -33,7 +33,7 @@ configureApp:
   # Output: following environment variable will be persisted in current environment's .env file.
   # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
 
-  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
@@ -55,12 +55,12 @@ deploy:
     # SSL_CRT_FILE: certificate file
     # SSL_KEY_FILE: certificate key
 
-  - uses: npm/command # Run npm command
+  - uses: cli/runNpmCommand # Run npm command
     with:
       workingDirectory: .
       args: install --no-audit
 
-  - uses: dotnet/command # Run dotnet command
+  - uses: cli/runDotnetCommand # Run dotnet command
     with:
       args: build extensions.csproj -o ./bin --ignore-failed-sources
       workingDirectory: ./api
