Add `token.botframework.com` to validDomains

--- a/bot-sso/templates/appPackage/manifest.template.json
+++ b/bot-sso/templates/appPackage/manifest.template.json
@@ -65,7 +65,9 @@
         "identity",
         "messageTeamMembers"
     ],
-    "validDomains": [],
+    "validDomains": [
+        "token.botframework.com"
+    ],
     "webApplicationInfo": {
         "id": "{{state.fx-resource-aad-app-for-teams.clientId}}",
         "resource": "{{{state.fx-resource-aad-app-for-teams.applicationIdUris}}}"
