--- a/todo-list-SPFx/package.json
+++ b/todo-list-SPFx/package.json
@@ -2,9 +2,15 @@
     "name": "todo-list-sp-fx",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": ">=14 <=16"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "@microsoft/teamsfx-cli": "1.*"
     },
     "license": "MIT"
 }
