chore: update npm command name

--- a/bot-sso/teamsfx/app.local.yml
+++ b/bot-sso/teamsfx/app.local.yml
@@ -61,6 +61,6 @@ configureApp:
 
 
 deploy:
-  - uses: npm/command # Run npm command
+  - uses: cli/runNpmCommand # Run npm command
     with:
       args: install --no-audit
