--- a/todo-list-SPFx/appPackage/manifest.template.json
+++ b/todo-list-SPFx/appPackage/manifest.template.json
@@ -15,28 +15,17 @@
         "full": "Full name for spfx-tab"
     },
     "description": {
-        "short": "Short description of spfx-tab",
-        "full": "Full description of spfx-tab"
+        "short": "todoList",
+        "full": "todoList"
     },
     "icons": {
-        "color": "resources/color.png",
-        "outline": "resources/outline.png"
+        "outline": "resources/outline.png",
+        "color": "resources/color.png"
     },
     "accentColor": "#004578",
-    "staticTabs": [
-        {
-            "entityId": "{%componentId%}",
-            "name": "{%webpartName%}",
-            "contentUrl": "https://{teamSiteDomain}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest=/_layouts/15/teamshostedapp.aspx%3Fteams%26personal%26componentId={%componentId%}%26forceLocale={locale}",
-            "websiteUrl": "https://products.office.com/en-us/sharepoint/collaboration",
-            "scopes": [
-                "personal"
-            ]
-        }
-    ],
     "configurableTabs": [
         {
-            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/teamshostedapp.aspx%3FopenPropertyPane=true%26teams%26componentId={%componentId%}%26forceLocale={locale}",
+            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/teamshostedapp.aspx%3Fteams%26componentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26forceLocale={locale}",
             "canUpdateConfiguration": true,
             "scopes": [
                 "team"
