--- a/todo-list-SPFx/appPackage/manifest.template.local.json
+++ b/todo-list-SPFx/appPackage/manifest.template.local.json
@@ -11,32 +11,21 @@
         "termsOfUseUrl": "https://www.microsoft.com/en-us/servicesagreement"
     },
     "name": {
-        "short": "spfx-tab",
-        "full": "Full name for spfx-tab"
+        "short": "TodoListSPFx-local-debug",
+        "full": "Full name for TodoListSPFx-local-debug"
     },
     "description": {
-        "short": "Short description of spfx-tab",
-        "full": "Full description of spfx-tab"
+        "short": "StodoList",
+        "full": "todoList"
     },
     "icons": {
         "color": "resources/color.png",
         "outline": "resources/outline.png"
     },
     "accentColor": "#004578",
-    "staticTabs": [
-        {
-            "entityId": "{%componentId%}",
-            "name": "{%webpartName%}",
-            "contentUrl": "https://{teamSiteDomain}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/TeamsWorkBench.aspx%3FcomponentId={%componentId%}%26teams%26personal%26forceLocale={locale}%26loadSPFX%3Dtrue%26debugManifestsFile%3Dhttps%3A%2F%2Flocalhost%3A4321%2Ftemp%2Fmanifests.js",
-            "websiteUrl": "https://products.office.com/en-us/sharepoint/collaboration",
-            "scopes": [
-                "personal"
-            ]
-        }
-    ],
     "configurableTabs": [
         {
-            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/TeamsWorkBench.aspx%3FcomponentId={%componentId%}%26openPropertyPane=true%26teams%26forceLocale={locale}%26loadSPFX%3Dtrue%26debugManifestsFile%3Dhttps%3A%2F%2Flocalhost%3A4321%2Ftemp%2Fmanifests.js",
+            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/TeamsWorkBench.aspx%3FcomponentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26openPropertyPane=true%26teams%26forceLocale={locale}%26loadSPFX%3Dtrue%26debugManifestsFile%3Dhttps%3A%2F%2Flocalhost%3A4321%2Ftemp%2Fmanifests.js",
             "canUpdateConfiguration": true,
             "scopes": [
                 "team"
