--- a/todo-list-SPFx/appPackage/manifest.template.json
+++ b/todo-list-SPFx/appPackage/manifest.template.json
@@ -11,8 +11,8 @@
         "termsOfUseUrl": "https://www.microsoft.com/en-us/servicesagreement"
     },
     "name": {
-        "short": "spfx-tab",
-        "full": "Full name for spfx-tab"
+        "short": "TodoListSPFx",
+        "full": "Full name for TodoListSPFx"
     },
     "description": {
         "short": "todoList",
