--- a/hello-world-in-meeting/teamsfx/teamsapp.yml
+++ b/hello-world-in-meeting/teamsfx/teamsapp.yml
@@ -1,49 +1,50 @@
 version: 1.0.0
 
-provision:
-  - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
-    with:
-      name: stocks-update-notif-bot
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # BOT_ID: the AAD app client id created for Bot Registration.
-    # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
+environmentFolderPath: ./teamsAppEnv
 
+provision:
   - uses: arm/deploy # Deploy given ARM templates parallelly.
     with:
       subscriptionId: ${{AZURE_SUBSCRIPTION_ID}} # The AZURE_SUBSCRIPTION_ID is a built-in environment variable. TeamsFx will ask you select one subscription if its value is empty. You're free to reference other environment varialbe here, but TeamsFx will not ask you to select subscription if it's empty in this case.
       resourceGroupName: ${{AZURE_RESOURCE_GROUP_NAME}} # The AZURE_RESOURCE_GROUP_NAME is a built-in environment variable. TeamsFx will ask you to select or create one resource group if its value is empty. You're free to reference other environment varialbe here, but TeamsFx will not ask you to select or create resource grouop if it's empty in this case.
       templates:
-      - path: ./infra/azure.bicep
-        parameters: ./infra/azure.parameters.json
-        deploymentName: Create-resources-for-bot
+       - path: ./infra/azure.bicep # Relative path to teamsfx folder
+         parameters: ./infra/azure.parameters.json # Relative path to teamsfx folder. Placeholders will be replaced with corresponding environment variable before ARM deployment.
+         deploymentName: Create-resources-for-tab # Required when deploy ARM template
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
-    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-provision-arm#output for more details on the naming conversion rule.
+    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
+
+  - uses: azureStorage/enableStaticWebsite
+    with:
+      storageResourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}}
+      indexPage: index.html
+      errorPage: error.html
+    # Output: N/A
 
 deploy:
-  - uses: npm/command
+  - uses: npm/command # Run npm command
     with:
-      args: install
-  - uses: npm/command
+      args: install --production
+  - uses: npm/command # Run npm command
     with:
       args: run build --if-present
-  - uses: azureFunctions/deploy
+  - uses: azureStorage/deploy # Deploy bits to Azure Storage Static Website
     with:
-      # deploy base folder
-      distributionPath: ./
-      # can be changed to any ignore file location, leave blank will ignore nothing
-      ignoreFile: ./.funcignore
-      # the resource id of the cloud resource to be deployed to
-      resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
+      distributionPath: ./build # Deploy base folder
+      resourceId: ${{TAB_AZURE_STORAGE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
 
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest
+      name: hello-world-in-meeting
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/validate
+    with:
+      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
@@ -58,7 +59,7 @@ publish:
   - uses: teamsApp/validate
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
-  - uses: teamsApp/createAppPackage
+  - uses: teamsApp/zipAppPackage
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
