--- a/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsapp.yml
+++ b/stocks-update-notification-bot-dotnet/StocksUpdateNotificationBot/teamsapp.yml
@@ -1,9 +1,18 @@
 version: 1.0.0
 
+environmentFolderPath: ./teamsAppEnv
+
+registerApp:
+  - uses: teamsApp/create # Creates a Teams app
+    with:
+      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest
+    # Output: following environment variable will be persisted in current environment's .env file.
+    # TEAMS_APP_ID: the id of Teams app
+
 provision:
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
-      name: npmSearchConnector
+      name: stocks-update-notif-bot
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
@@ -18,28 +27,8 @@ provision:
         deploymentName: Create-resources-for-bot
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
     # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-provision-arm#output for more details on the naming conversion rule.
-
-deploy:
-  - uses: npm/command # Run npm command
-    with:
-      args: install --production
-  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
-    with:
-      distributionPath: . # Deploy base folder
-      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
-      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
-
-registerApp:
-  - uses: teamsApp/create # Creates a Teams app
-    with:
-      name: npmSearchConnector # Teams app name
-    # Output: following environment variable will be persisted in current environment's .env file.
-    # TEAMS_APP_ID: the id of Teams app
-
+    
 configureApp:
-  - uses: teamsApp/validate
-    with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
   - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
@@ -50,6 +39,17 @@ configureApp:
       appPackagePath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip # Relative path to teamsfx folder. This is the path for built zip file.
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
+
+deploy:
+  - uses: dotnet/command
+    with:
+      args: publish --configuration Release --runtime win-x86 --self-contained
+  - uses: azureFunctions/deploy
+    with:
+      # deploy base folder
+      distributionPath: ./bin/Release/net6.0/win-x86/publish
+      # the resource id of the cloud resource to be deployed to
+      resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
 
 publish:
   - uses: teamsApp/validate
