--- a/stocks-update-notification-bot/teamsapp.yml
+++ b/stocks-update-notification-bot/teamsapp.yml
@@ -1,21 +1,11 @@
 version: 1.0.0
 
-provision:
-  - uses: aadApp/create # Creates a new AAD app to authenticate users if AAD_APP_CLIENT_ID environment variable is empty
-    with:
-      name: QueryOrgUserWithMESSO # Note: when you run configure/aadApp, the AAD app name will be updated based on the definition of manifest. If you don't want to change the name, ensure the name in AAD manifest is same with the name defined here.
-      generateClientSecret: true # If the value is false, the action will not generate client secret for you
-      # Output: following environment variable will be persisted in current environment's .env file.
-      # AAD_APP_CLIENT_ID: the client id of AAD app
-      # AAD_APP_CLIENT_SECRET: the client secret of AAD app
-      # AAD_APP_OBJECT_ID: the object id of AAD app
-      # AAD_APP_TENANT_ID: the tenant id of AAD app
-      # AAD_APP_OAUTH_AUTHORITY_HOST: the host of OAUTH authority of AAD app
-      # AAD_APP_OAUTH_AUTHORITY: the OAUTH authority of AAD app
+environmentFolderPath: ./teamsAppEnv
 
+provision:
   - uses: botAadApp/create # Creates a new AAD app for Bot Registration.
     with:
-      name: QueryOrgUserWithMESSO
+      name: stocks-update-notif-bot
     # Output: following environment variable will be persisted in current environment's .env file.
     # BOT_ID: the AAD app client id created for Bot Registration.
     # SECRET_BOT_PASSWORD: the AAD app client secret created for Bot Registration.
@@ -29,40 +19,33 @@ provision:
         parameters: ./infra/azure.parameters.json
         deploymentName: Create-resources-for-bot
       bicepCliVersion: v0.9.1 # Teams Toolkit will download this bicep CLI version from github for you, will use bicep CLI in PATH if you remove this config.
-    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-actions/arm-deploy for more details on the naming conversion rule.
+    # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-provision-arm#output for more details on the naming conversion rule.
 
 deploy:
-  - uses: cli/runNpmCommand # Run npm command
+  - uses: npm/command
     with:
       args: install
-  - uses: cli/runNpmCommand
+  - uses: npm/command
     with:
       args: run build --if-present
-  - uses: azureAppService/deploy # Deploy bits to Azure App Serivce
+  - uses: azureFunctions/deploy
     with:
-      distributionPath: . # Deploy base folder
-      ignoreFile: ./.webappignore # Can be changed to any ignore file location, leave blank will ignore nothing
-      resourceId: ${{BOT_AZURE_APP_SERVICE_RESOURCE_ID}} # The resource id of the cloud resource to be deployed to
+      # deploy base folder
+      distributionPath: ./
+      # can be changed to any ignore file location, leave blank will ignore nothing
+      ignoreFile: ./.funcignore
+      # the resource id of the cloud resource to be deployed to
+      resourceId: ${{BOT_AZURE_FUNCTION_APP_RESOURCE_ID}}
 
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      name: QueryOrgUserWithMESSO # Teams app name
+      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: aadApp/update # Apply the AAD manifest to an existing AAD app. Will use the object id in manifest file to determine which AAD app to update.
-    with:
-      manifestTemplatePath: ./aad.manifest.template.json # Relative path to teamsfx folder. Environment variables in manifest will be replaced before apply to AAD app
-      outputFilePath : ./build/aad.manifest.${{TEAMSFX_ENV}}.json
-  # Output: following environment variable will be persisted in current environment's .env file.
-  # AAD_APP_ACCESS_AS_USER_PERMISSION_ID: the id of access_as_user permission which is used to enable SSO
-  
-  - uses: teamsApp/validate
-    with:
-      manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
-  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
@@ -77,7 +60,7 @@ publish:
   - uses: teamsApp/validate
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
-  - uses: teamsApp/zipAppPackage
+  - uses: teamsApp/createAppPackage
     with:
       manifestTemplatePath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
