--- a/stocks-update-notification-bot/teamsfx/app.yml
+++ b/stocks-update-notification-bot/teamsfx/app.yml
@@ -20,10 +20,10 @@ provision:
     # Output: every bicep output will be persisted in current environment's .env file with certain naming conversion. Refer https://aka.ms/teamsfx-provision-arm#output for more details on the naming conversion rule.
 
 deploy:
-  - uses: npm/command
+  - uses: cli/runNpmCommand
     with:
       args: install
-  - uses: npm/command
+  - uses: cli/runNpmCommand
     with:
       args: run build --if-present
   - uses: azureFunctions/deploy
@@ -38,12 +38,12 @@ deploy:
 registerApp:
   - uses: teamsApp/create # Creates a Teams app
     with:
-      manifestPath: ./appPackage/manifest.template.json # Path to manifest
+      name: ${{TEAMS_APP_NAME}} # Teams app name
     # Output: following environment variable will be persisted in current environment's .env file.
     # TEAMS_APP_ID: the id of Teams app
 
 configureApp:
-  - uses: teamsApp/createAppPackage # Build Teams app package with latest env value
+  - uses: teamsApp/zipAppPackage # Build Teams app package with latest env value
     with:
       manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
@@ -58,7 +58,7 @@ publish:
   - uses: teamsApp/validate
     with:
       manifestPath: ./appPackage/manifest.template.json # Path to manifest template
-  - uses: teamsApp/createAppPackage
+  - uses: teamsApp/zipAppPackage
     with:
       manifestPath: ./appPackage/manifest.template.json # Path to manifest template
       outputZipPath: ./build/appPackage/appPackage.${{TEAMSFX_ENV}}.zip
