--- a/hello-world-tab-with-backend/package.json
+++ b/hello-world-tab-with-backend/package.json
@@ -26,7 +26,7 @@
     "typescript": "^4.1.2"
   },
   "scripts": {
-    "dev:teamsfx": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
+    "dev:teamsfx": "node script/run.tab.js . env/.env.local",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
