--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "dev:teamsfx": "node script/run.js . env/.env.local",
     "dev": "nodemon --inspect=9239 --signal SIGINT ./index.js",
     "start": "node ./index.js",
     "watch": "nodemon ./index.js"
