--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -8,7 +8,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "scripts": {
-    "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
+    "dev:teamsfx": "node script/run.js . env/.env.local",
     "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
     "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
     "watch:teamsfx": "tsc --watch",
@@ -25,12 +25,13 @@
     "@azure/storage-blob": "^12.9.0",
     "@microsoft/adaptivecards-tools": "^1.0.0",
     "@microsoft/teamsfx": "^2.0.0",
-    "botbuilder": "^4.15.0"
+    "botbuilder": "^4.18.0"
   },
   "devDependencies": {
     "@azure/functions": "^1.2.3",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
+    "@types/node": "^14.0.0",
     "azurite": "^3.16.0",
     "chai": "^4.3.6",
     "mocha": "^9.2.0",
