--- a/incoming-webhook-notification/package.json
+++ b/incoming-webhook-notification/package.json
@@ -1,10 +1,27 @@
 {
-    "name": "incoming-webhook-notification",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "license": "MIT"
+  "name": "incoming-webhook-notification",
+  "version": "1.0.0",
+  "description": "Microsoft Teams Toolkit Incoming Webhook Notification Sample",
+  "author": "Microsoft",
+  "license": "MIT",
+  "main": "./lib/index.js",
+  "scripts": {
+    "dev": "nodemon -e ts --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
+    "build": "tsc --build",
+    "start": "node ./lib/src/index.js",
+    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com"
+  },
+  "dependencies": {
+    "@microsoft/adaptivecards-tools": "^1.0.0",
+    "axios": "^0.26.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.4.4"
+  }
 }
