chore: update stock notification folder structure

--- a/stocks-update-notification-bot/package.json
+++ b/stocks-update-notification-bot/package.json
@@ -8,7 +8,7 @@
     "author": "Microsoft",
     "license": "MIT",
     "scripts": {
-        "dev:teamsfx": "node teamsfx/script/run.js . teamsfx/.env.local",
+        "dev:teamsfx": "node script/run.js . env/.env.local",
         "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
         "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
         "watch:teamsfx": "tsc --watch",
@@ -32,6 +32,7 @@
         "@azure/functions": "^1.2.3",
         "@microsoft/teamsfx-run-utils": "alpha",
         "@types/lodash": "^4.14.182",
+        "@types/node": "^14.0.0",
         "azurite": "^3.16.0",
         "shx": "^0.3.4",
         "ts-node": "^10.4.0",
