--- a/stocks-update-notification-bot/env/.env.dev
+++ b/stocks-update-notification-bot/env/.env.dev
@@ -1,13 +1,16 @@
 # Built-in environment variables
-TEAMSFX_ENV=local
-TEAMS_APP_NAME=stocks-update-notif-bot-local
+TEAMSFX_ENV=dev
+AZURE_SUBSCRIPTION_ID=
+AZURE_RESOURCE_GROUP_NAME=
+RESOURCE_SUFFIX=
 
 # Generated during provision, you can also add your own variables. If you're adding a secret value, add SECRET_ prefix to the name so Teams Toolkit can handle them properly
 BOT_ID=
 SECRET_BOT_PASSWORD=
 TEAMS_APP_ID=
+BOT_AZURE_FUNCTION_APP_RESOURCE_ID=
 BOT_DOMAIN=
-BOT_ENDPOINT=
+BOT_FUNCTION_ENDPOINT=
 
 # Environment variables configured for the stocks update notification bot sample.
 TEAMSFX_API_ALPHAVANTAGE_ENDPOINT=
