--- a/hello-world-in-meeting/appPackage/manifest.json
+++ b/hello-world-in-meeting/appPackage/manifest.json
@@ -11,8 +11,8 @@
         "termsOfUseUrl": "${{TAB_ENDPOINT}}/index.html#/termsofuse"
     },
     "icons": {
-        "color": "resources/color.png",
-        "outline": "resources/outline.png"
+        "color": "color.png",
+        "outline": "outline.png"
     },
     "name": {
         "short": "hello-world-in-meeting-${{TEAMSFX_ENV}}",
