--- a/todo-list-SPFx/appPackage/manifest.json
+++ b/todo-list-SPFx/appPackage/manifest.json
@@ -19,8 +19,8 @@
         "full": "todoList"
     },
     "icons": {
-        "outline": "resources/outline.png",
-        "color": "resources/color.png"
+        "outline": "outline.png",
+        "color": "color.png"
     },
     "accentColor": "#004578",
     "configurableTabs": [
