--- a/NPM-search-connector-M365/.vscode/tasks.json
+++ b/NPM-search-connector-M365/.vscode/tasks.json
@@ -10,8 +10,8 @@
                 "Validate prerequisites",
                 "Start local tunnel",
                 "Create resources",
-                "Set up local projects",
-                "Start services"
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -21,8 +21,8 @@
                 "Validate prerequisites",
                 "Start local tunnel",
                 "Create resources",
-                "Set up local projects",
-                "Start services",
+                "Build project",
+                "Start application",
                 "Install app in Teams"
             ],
             "dependsOrder": "sequence"
@@ -78,9 +78,9 @@
             }
         },
         {
-            // Set up local projects.
+            // Build project.
             // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
-            "label": "Set up local projects",
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
@@ -89,7 +89,7 @@
             }
         },
         {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start bot"
             ]
