--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -8,7 +8,7 @@
   "author": "Microsoft",
   "license": "MIT",
   "scripts": {
-    "dev:teamsfx": "node script/run.js . env/.env.local",
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run dev",
     "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
     "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
     "watch:teamsfx": "tsc --watch",
@@ -34,9 +34,9 @@
     "@types/node": "^14.0.0",
     "azurite": "^3.16.0",
     "chai": "^4.3.6",
+    "env-cmd": "^10.1.0",
     "mocha": "^9.2.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.4",
-    "@microsoft/teamsfx-run-utils": "alpha"
+    "typescript": "^4.4.4"
   }
 }
