--- a/hello-world-bot-with-tab/.vscode/tasks.json
+++ b/hello-world-bot-with-tab/.vscode/tasks.json
@@ -10,8 +10,8 @@
                 "Validate prerequisites",
                 "Start local tunnel",
                 "Create resources",
-                "Set up local projects",
-                "Start services"
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -67,9 +67,9 @@
             }
         },
         {
-            // Set up local projects.
+            // Build project.
             // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
-            "label": "Set up local projects",
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
@@ -78,7 +78,7 @@
             }
         },
         {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start bot",
                 "Start frontend"
@@ -87,10 +87,10 @@
         {
             "label": "Start bot",
             "type": "shell",
-            "command": "node teamsfx/script/run.bot.js . teamsfx/.env.local",
+            "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}"
+                "cwd": "${workspaceFolder}/bot"
             },
             "problemMatcher": {
                 "pattern": [
@@ -111,10 +111,10 @@
         {
             "label": "Start frontend",
             "type": "shell",
-            "command": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
+            "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}"
+                "cwd": "${workspaceFolder}/tab"
             },
             "problemMatcher": {
                 "pattern": {
