--- a/hello-world-in-meeting/.vscode/tasks.json
+++ b/hello-world-in-meeting/.vscode/tasks.json
@@ -9,8 +9,8 @@
             "dependsOn": [
                 "Validate prerequisites",
                 "Create resources",
-                "Set up local projects",
-                "Start services"
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -43,9 +43,9 @@
             }
         },
         {
-            // Set up local projects.
+            // Build project.
             // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
-            "label": "Set up local projects",
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
@@ -54,7 +54,7 @@
             }
         },
         {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start frontend"
             ]
