--- a/query-org-user-with-message-extension-sso/.vscode/tasks.json
+++ b/query-org-user-with-message-extension-sso/.vscode/tasks.json
@@ -10,8 +10,8 @@
                 "Validate & install prerequisites",
                 "Start local tunnel",
                 "Create resources",
-                "Set up local projects",
-                "Start services"
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -65,9 +65,9 @@
             }
         },
         {
-            // Set up local projects.
+            // Build project.
             // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
-            "label": "Set up local projects",
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
@@ -76,7 +76,7 @@
             }
         },
         {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start bot"
             ]
