--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -9,8 +9,8 @@
             "dependsOn": [
                 "Validate prerequisites",
                 "Create resources",
-                "Set up local projects",
-                "Start services"
+                "Build project",
+                "Start application"
             ],
             "dependsOrder": "sequence"
         },
@@ -19,8 +19,8 @@
             "dependsOn": [
                 "Validate prerequisites",
                 "Create resources",
-                "Set up local projects",
-                "Start services",
+                "Build project",
+                "Start application",
                 "Install app in Teams"
             ],
             "dependsOrder": "sequence"
@@ -45,6 +45,8 @@
             }
         },
         {
+            // Create the debug resources.
+            // See https://aka.ms/teamsfx-provision-task to know the details and how to customize the args.
             "label": "Create resources",
             "type": "teamsfx",
             "command": "provision",
@@ -54,7 +56,9 @@
             }
         },
         {
-            "label": "Set up local projects",
+            // Build project.
+            // See https://aka.ms/teamsfx-deploy-task to know the details and how to customize the args.
+            "label": "Build project",
             "type": "teamsfx",
             "command": "deploy",
             "args": {
@@ -63,7 +67,7 @@
             }
         },
         {
-            "label": "Start services",
+            "label": "Start application",
             "dependsOn": [
                 "Start frontend",
                 "Start backend"
@@ -72,10 +76,10 @@
         {
             "label": "Start frontend",
             "type": "shell",
-            "command": "node teamsfx/script/run.tab.js . teamsfx/.env.local",
+            "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}"
+                "cwd": "${workspaceFolder}/tab"
             },
             "problemMatcher": {
                 "pattern": {
@@ -94,10 +98,10 @@
         {
             "label": "Start backend",
             "type": "shell",
-            "command": "node teamsfx/script/run.api.js . teamsfx/.env.local",
+            "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}",
+                "cwd": "${workspaceFolder}/api",
                 "env": {
                     "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
                 }
