--- a/todo-list-with-Azure-backend-M365/tab/package.json
+++ b/todo-list-with-Azure-backend-M365/tab/package.json
@@ -13,7 +13,11 @@
     "react-scripts": "^5.0.0",
     "typestyle": "^2.1.0"
   },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
+  },
   "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localSettings npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
