chore: add engines.node field into package.json

--- a/teams-videoapp-sample/package.json
+++ b/teams-videoapp-sample/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "adaptive-card-notification",
+    "name": "teams-videoapp-sample",
     "version": "0.0.1",
     "description": "",
     "engines": {
@@ -8,9 +8,6 @@
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
     },
     "license": "MIT"
 }
