--- a/todo-list-SPFx/package.json
+++ b/todo-list-SPFx/package.json
@@ -2,6 +2,9 @@
     "name": "todo-list-sp-fx",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": ">=16.13.0 <17.0.0"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
