--- a/NPM-search-connector-M365/package.json
+++ b/NPM-search-connector-M365/package.json
@@ -2,6 +2,9 @@
     "name": "npm-search-connector",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
