--- a/graph-connector-app/package.json
+++ b/graph-connector-app/package.json
@@ -2,6 +2,9 @@
     "name": "graph-connector-app",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
