--- a/query-org-user-with-message-extension-sso/package.json
+++ b/query-org-user-with-message-extension-sso/package.json
@@ -2,6 +2,9 @@
     "name": "query-org-user-with-me-sso",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
