--- a/todo-list-with-Azure-backend/package.json
+++ b/todo-list-with-Azure-backend/package.json
@@ -2,6 +2,9 @@
     "name": "to-do-list",
     "version": "0.0.1",
     "description": "",
+    "engines": {
+        "node": "14 || 16 || 18"
+    },
     "author": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
