chore(v3-sa): use m365extensions instead of outlook channel

--- a/NPM-search-connector-M365/teamsapp.local.yml
+++ b/NPM-search-connector-M365/teamsapp.local.yml
@@ -23,7 +23,7 @@ provision:
       description: ""
       channels:
         - name: msteams
-        - name: outlook
+        - name: m365extensions
 
 configureApp:
   - uses: teamsApp/validate
