--- a/todo-list-with-Azure-backend-M365/.vscode/launch.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/launch.json
@@ -2,6 +2,72 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Remote in Teams (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${dev:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "presentation": {
+                "group": "group 1: Teams",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Teams (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${dev:teamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "presentation": {
+                "group": "group 1: Teams",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Outlook (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://outlook.office.com/host/${dev:teamsAppInternalId}?${account-hint}",
+            "presentation": {
+                "group": "group 2: Outlook",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Outlook (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://outlook.office.com/host/${dev:teamsAppInternalId}?${account-hint}",
+            "presentation": {
+                "group": "group 2: Outlook",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Office (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://www.office.com/m365apps/${dev:teamsAppInternalId}?auth=2&${account-hint}",
+            "presentation": {
+                "group": "group 3: Office",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Launch Remote in Office (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://www.office.com/m365apps/${dev:teamsAppInternalId}?auth=2&${account-hint}",
+            "presentation": {
+                "group": "group 3: Office",
+                "order": 3
+            },
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
             "name": "Attach to Frontend in Teams (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
