--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                "Validate prerequisites",
+                // "Validate prerequisites",
                 "Create resources",
                 "Build project",
                 "Start application"
@@ -51,7 +51,7 @@
             "type": "teamsfx",
             "command": "provision",
             "args": {
-                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -62,7 +62,7 @@
             "type": "teamsfx",
             "command": "deploy",
             "args": {
-                "template": "${workspaceFolder}/teamsfx/app.local.yml",
+                "template": "${workspaceFolder}/teamsapp.local.yml",
                 "env": "local"
             }
         },
@@ -79,7 +79,7 @@
             "command": "npm run dev:teamsfx",
             "isBackground": true,
             "options": {
-                "cwd": "${workspaceFolder}/tab"
+                "cwd": "${workspaceFolder}/tabs"
             },
             "problemMatcher": {
                 "pattern": {
