chore: remove comment

--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "Start Teams App Locally",
             "dependsOn": [
-                // "Validate prerequisites",
+                "Validate prerequisites",
                 "Create resources",
                 "Build project",
                 "Start application"
