--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -1,13 +1,35 @@
 {
     "name": "sso-command-bot",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
+    "version": "1.0.0",
+    "description": "Microsoft Teams Toolkit Command and Response Bot Sample",
+    "author": "Microsoft",
+    "license": "MIT",
+    "main": "./lib/index.js",
     "scripts": {
+        "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+        "dev": "nodemon --watch ./src --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
+        "build": "tsc --build && shx cp -r ./src/adaptiveCards ./lib/src && copyfiles src/public/*.html lib/",
+        "start": "node ./lib/src/index.js",
+        "watch": "nodemon --watch ./src --exec \"npm run start\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "devDependencies": {
-        "@microsoft/teamsfx-cli": "1.*"
+    "repository": {
+        "type": "git",
+        "url": "https://github.com"
     },
-    "license": "MIT"
+    "dependencies": {
+        "@microsoft/teamsfx": "^2.0.0",
+        "botbuilder": "^4.15.0",
+        "isomorphic-fetch": "^3.0.0",
+        "restify": "^10.0.0"
+    },
+    "devDependencies": {
+        "@types/restify": "8.5.5",
+        "copyfiles": "^2.4.1",
+        "env-cmd": "^10.1.0",
+        "nodemon": "^2.0.7",
+        "shx": "^0.3.4",
+        "ts-node": "~9.1.1",
+        "typescript": "~4.4.4"
+    }
 }
